libraries, componets, styles, route, modules, refactor

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,6 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "styles/variables.scss";
 
-
+body{
+    background-color: #eaeaea;
+}
