--- a/src/app/client-features/home/home.component.html
+++ b/src/app/client-features/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="resume-grls">
 <mdb-card *ngFor="let i of s">
     <!--Card image-->
-    <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap"></mdb-card-img>
+    <mdb-card-img [src]="getImageUrl(i)" alt="Card image cap"></mdb-card-img>
     <!--Card content-->
     <mdb-card-body>
   
