--- a/src/app/widgets/contact-widget/contact-widget.component.html
+++ b/src/app/widgets/contact-widget/contact-widget.component.html
@@ -1,3 +1,9 @@
 <div class="contact">
-  <div class="contact-me">Contact</div>
+  <app-phone-svg></app-phone-svg>
+  <div class="contact-me">
+    Call us now: 1-800-255-8541
+  </div>
+  <div class="how-can-i">
+    Click here to get online assistance
+  </div>
 </div>
