--- a/src/app/client-features/client-features-main/client-features-main.component.html
+++ b/src/app/client-features/client-features-main/client-features-main.component.html
@@ -2,11 +2,15 @@
 <app-silder></app-silder>
 <div class="page-content">
     <div class="page-container">
-      <div class="page-col left-col"><app-contact-widget></app-contact-widget></div>
+      <div class="page-col left-col">
+          <app-contact-widget class="side"></app-contact-widget>
+      </div>
       <div class="container page-col page-main-col">
           <router-outlet></router-outlet>
       </div>
-      <div class="page-col right-col"><app-newsletter-widget></app-newsletter-widget></div>
+      <div class="page-col right-col">
+        <app-newsletter-widget class="side"></app-newsletter-widget>
+      </div>
     </div>
 </div>
 <app-footer></app-footer>
