--- a/src/app/client-features/silder/silder.component.scss
+++ b/src/app/client-features/silder/silder.component.scss
@@ -25,15 +25,17 @@
     }
     app-booking-widget{
         position: absolute;
-        top: 50%;
+        top: 0;
+        bottom: 0;
         left: 0;
         right: 0;
         margin: auto;
-        @include media-breakpoint-up(lg){     
-            top: 15%;
+        z-index: 1000;
+        @include media-breakpoint-up(md){
+            top: 0;
             left: 3%;
             margin: 0;
-            z-index: 1000;
+            
         }
     }
 }
