--- a/src/app/widgets/booking-widget/booking-widget.component.scss
+++ b/src/app/widgets/booking-widget/booking-widget.component.scss
@@ -3,26 +3,21 @@
 @import "../../../styles/mixins";
 
 :host{
-    height: 100%;
+    // height: 100%;
+    // width: 100%;
 }
 .booking-widget{
     padding: 15px;
     max-width: 450px;
+    width: 100%;
     height: 100%;
-    // margin: auto;
-    // background: red;
-    /deep/ .card{
+    /*/deep/*/ .card{
         height: 100%;
-        // background-color: rgba(255,255,255,.4) !important;
+        background-color: rgba(255,255,255,.4) !important;
+        border-radius: 0;
+        border: 0;
     }
     .content{
         padding: 15px;
     }
-    // mdb-card{
-    //     height: 100%;
-    // }
-    // width: 100%;
-    // height: 100%;
-        // background-color: white; 
-    // background-color: rgba(255,255,255,.7) !important;
 }
