--- a/src/app/client-features/top-bar/top-bar.component.html
+++ b/src/app/client-features/top-bar/top-bar.component.html
@@ -1,24 +1,17 @@
 <div class="nav">
     <div class="container nav-content">
       <nav class="navbar navbar-expand-lg navbar-dark row">
-        <a class="navbar-brand logo" href="#">Uplaymate</a>
+        <a class="navbar-brand logo" href="#">Uplaymate<span class="slogan">escort</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Booking</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
+            <li [ngClass]="{'nav-item': true, 'active': activeUrl === item[1] }" *ngFor="let item of navItems">
+              <a class="nav-link" [routerLink]="[item[1]]">{{ item[0] }} 
+              <span class="sr-only" *ngIf="activeUrl === item[1]">(current)</span>
+              </a>
             </li>
           </ul>
         </div>
