--- a/src/app/client-features/home/home.component.html
+++ b/src/app/client-features/home/home.component.html
@@ -1,22 +1,56 @@
-<p>Top Companions Agency functions as your private concierge service for <span class="color-darker">exclusive sensual encounters</span> with <strong>high-class escort companions &amp; travel escorts.</strong></p>
+<p>Top Companions Agency functions as your private concierge service for <span class="color-darker">exclusive sensual
+    encounters</span> with <strong>high-class escort companions &amp; travel escorts.</strong></p>
 <div class="resume-grls">
-<mdb-card *ngFor="let i of s">
+  <div *ngFor="let i of s" class="joder">
+  <mat-card class="example-card view overlay">
+    <!-- <mat-card-header> -->
+      <!-- <div mat-card-avatar class="example-header-image"></div> -->
+      <!-- <mat-card-title>Shiba Inu</mat-card-title> -->
+      <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+    <!-- </mat-card-header> -->
     <!--Card image-->
-    <mdb-card-img [src]="getImageUrl(i)" alt="Card image cap"></mdb-card-img>
+    
+    <!-- class="g-image image-fluid" -->
+    <img  mat-card-image [src]="getImageUrl(i)" alt="Photo of a Shiba Inu">
+    <div class="mask rgba-white-light">Example</div>
+
+      <!-- <div class="g-image" mat-card-image> -->
+      <!-- class="g-image image-fluid"  -->
+      <!-- <img  [src]="getImageUrl(i)" alt="Photo of a Shiba Inu"> -->
+      <!-- </div>  -->
+
     <!--Card content-->
-    <mdb-card-body>
-  
+    <mat-card-content>
+      <h3>Celete, <span>24</span></h3>
+      <p>
+          Celeste is your young dream girl...
+      </p>
+    </mat-card-content>
+    <!-- <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions> -->
+    <div class="desc">Celeste is your young dream girl... petite, sweet, smart, warm, sexy, and confident. She is the beautiful and exotic woman with the friendly personality you have always hoped you would meet. Giving you different experiences is Latesha favorite specialty! Her wonderful smile and amazing curves will make you happy to have her as the perfect companion for any particular occasion!</div>
+  </mat-card>
+</div>
+
+  <!-- <mdb-card *ngFor="let i of s"> -->
+    <!--Card image-->
+    <!-- <mdb-card-img [src]="getImageUrl(i)" alt="Card image cap"></mdb-card-img> -->
+    <!--Card content-->
+    <!-- <mdb-card-body> -->
+
       <!--Title-->
-      <mdb-card-title>
-        <h4>Card Title</h4>
-      </mdb-card-title>
-  
+      <!-- <mdb-card-title> -->
+        <!-- <h4>Card Title</h4> -->
+      <!-- </mdb-card-title> -->
+
       <!--Text-->
-      <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's
-        content.
-      </mdb-card-text>
-  
-      <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
-    </mdb-card-body>
-  </mdb-card>
+      <!-- <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's -->
+        <!-- content. -->
+      <!-- </mdb-card-text> -->
+
+      <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a> -->
+    <!-- </mdb-card-body> -->
+  <!-- </mdb-card> -->
 </div>
