--- a/src/app/client-features/silder/silder.component.html
+++ b/src/app/client-features/silder/silder.component.html
@@ -3,8 +3,11 @@
     <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
         <mdb-carousel-item>
           <div class="view w-100">
-            <img class="d-block w-100" src="http://www.princessbavaroresort.com/images/slides/slide-17.jpg" alt="First slide">
-            <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
+            <div class="d-block w-100" style="background-image: url('https://www.secretescortsdr.com/storage/app/uploads/public/5a5/db6/33b/5a5db633b246f205480256.jpg?v=14')" class="slide-image"></div>
+
+            <!-- <img class="d-block w-100" src="http://www.princessbavaroresort.com/images/slides/slide-17.jpg" alt="First slide"> -->
+            <div class="mask  waves-light" mdbWavesEffect></div>
+            <!-- rgba-black-light -->
           </div>
           <div class="carousel-caption">
             <h3 class="h3-responsive">probando 1</h3>
@@ -13,8 +16,10 @@
         </mdb-carousel-item>
         <mdb-carousel-item>
           <div class="view w-100">
-            <img class="d-block w-100" src="http://www.majesticcostamujeres.com/images/slides/slide-2.jpg" alt="Second slide">
-            <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+              <div class="d-block w-100" style="background-image: url('http://www.majesticcostamujeres.com/images/slides/slide-2.jpg')" class="slide-image"></div>
+            <!-- <img class="d-block w-100" src="http://www.majesticcostamujeres.com/images/slides/slide-2.jpg" alt="Second slide"> -->
+            <!-- rgba-black-strong -->
+            <div class="mask  waves-light" mdbWavesEffect></div>
           </div>
           <div class="carousel-caption">
             <h3 class="h3-responsive">probando 2</h3>
@@ -23,8 +28,11 @@
         </mdb-carousel-item>
         <mdb-carousel-item>
           <div class="view w-100">
-            <img class="d-block w-100" src="http://www.dreameurotrip.com/wp-content/uploads/2014/04/berlin-party-scene-watergate.jpg" alt="Third slide">
-            <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+              <div class="d-block w-100" style="background-image: url('http://www.dreameurotrip.com/wp-content/uploads/2014/04/berlin-party-scene-watergate.jpg')" class="slide-image"></div>
+
+            <!-- <img class="d-block w-100" src="http://www.dreameurotrip.com/wp-content/uploads/2014/04/berlin-party-scene-watergate.jpg" alt="Third slide"> -->
+            <div class="mask waves-light" mdbWavesEffect></div>
+            <!-- rgba-black-slight  -->
           </div>
           <div class="carousel-caption">
             <h3 class="h3-responsive">probando 3</h3>
