--- a/src/app/client-features/top-bar/top-bar.component.scss
+++ b/src/app/client-features/top-bar/top-bar.component.scss
@@ -6,7 +6,7 @@
 
 .nav{
     $nav-bar-height: 84px;
-    background: #000;
+    background: #16171D;
     min-height: $nav-bar-height;
     display: flex;
     position: sticky;
@@ -19,7 +19,7 @@
             padding-left: 15px;
             padding-right: 15px; 
             min-height: $nav-bar-height;
-            background-color: #000;
+            background-color: #16171D;
         }
     }
     .navbar{
@@ -34,8 +34,20 @@
         }
         .nav-link{
             transition: color 0.3s ease;
+            position: relative;
+            font-weight: 400;
             &:hover{
                 color: orange;
+                // text-decoration: underline;
+                &:after{
+                    content: '';
+                    position: absolute;
+                    display: block;
+                    width: 80%;
+                    height: 2px;
+                    // background: orange;
+                    opacity: 0.8;
+                }
             }
         }
     }
@@ -43,12 +55,23 @@
         // background: rgb(253,243,182);
         // background: linear-gradient(90deg, rgba(253,243,182,1) 0%, rgba(249,188,72,1) 35%, rgba(246,114,7,1) 100%);
         text-transform: uppercase;
-        background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+        // background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
         background: rgb(253,243,182);
         background: linear-gradient(90deg, rgba(253,243,182,1) 0%, rgba(249,188,72,1) 35%, rgba(246,114,7,1) 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-weight: bold;
         letter-spacing: 5px;
+        position: relative;
+        .slogan{
+            position: absolute;
+            display: inline-block;
+            // width: 100%;
+            bottom: 0;
+            right: -50px;
+            letter-spacing: 5px;
+            font-size: 12px;
+            color: orange;
+        }
     }
 }
