--- a/src/app/widgets/booking-widget/booking-widget.component.html
+++ b/src/app/widgets/booking-widget/booking-widget.component.html
@@ -1,15 +1,52 @@
 <div class="booking-widget">
-    <mat-form-field color="accent">
-        <mat-label>Inherited calendar color</mat-label>
-        <input matInput [matDatepicker]="picker1">
-        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-        <mat-datepicker #picker1></mat-datepicker>
-    </mat-form-field>
-            
-    <mat-form-field color="accent">
-        <mat-label>Custom calendar color</mat-label>
-        <input matInput [matDatepicker]="picker2">
-        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-        <mat-datepicker #picker2 color="primary"></mat-datepicker>
-    </mat-form-field>
+    <div class="content">
+        <mat-card class="card">
+            <div class="b-card-content">
+                <mat-card-header>
+                    <mat-card-title>Booking</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <mat-form-field color="accent">
+                        <mat-label>Check In</mat-label>
+                        <input matInput [matDatepicker]="picker1">
+                        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                        <mat-datepicker #picker1></mat-datepicker>
+                    </mat-form-field>
+
+                    <mat-form-field color="accent">
+                        <mat-label>Check out</mat-label>
+                        <input matInput [matDatepicker]="picker2">
+                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                        <mat-datepicker #picker2 color="primary"></mat-datepicker>
+                    </mat-form-field>
+
+                    <mat-radio-group aria-label="Select an option">
+                        <mat-radio-button value="1">Pakages</mat-radio-button>
+                        <mat-radio-button value="2">By Stay</mat-radio-button>
+                    </mat-radio-group>
+                    <mat-form-field>
+                        <mat-select placeholder="Stay Type" multiple>
+                            <mat-select-trigger>
+                                {{toppings.value ? toppings.value[0] : ''}}
+                                <span *ngIf="toppings.value?.length > 1" class="example-additional-selection">
+                                    (+{{toppings.value.length - 1}}
+                                    {{toppings.value?.length === 2 ? 'other' : 'others'}})
+                                </span>
+                            </mat-select-trigger>
+                            <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                </mat-card-content>
+
+
+                <mat-card-actions>
+                    <div class="example-button-row">
+                        <button mat-raised-button>Book Now</button>
+                    </div>
+                </mat-card-actions>
+            </div>
+        </mat-card>
+
+    </div>
 </div>
