--- a/src/app/widgets/booking-widget/booking-widget.component.scss
+++ b/src/app/widgets/booking-widget/booking-widget.component.scss
@@ -7,17 +7,39 @@
     // width: 100%;
 }
 .booking-widget{
-    padding: 15px;
-    max-width: 450px;
-    width: 100%;
-    height: 100%;
-    /*/deep/*/ .card{
-        height: 100%;
-        background-color: rgba(255,255,255,.4) !important;
-        border-radius: 0;
-        border: 0;
-    }
     .content{
         padding: 15px;
+    }
+    .card{
+        // padding: 15px;
+        max-width: 230px;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        // display: flex;
+        // justify-content: center;
+    }
+    .b-card-content{
+
+    }
+    /deep/ .mat-card-header-text {
+        margin: 0;
+    }
+    mat-radio-group{
+
+        mat-radio-button{
+            padding: 5px;
+        }
+    }
+    // /deep/ .card{
+    //     height: 100%;
+    //     background-color: rgba(255,255,255,.4) !important;
+    //     border-radius: 0;
+    //     border: 0;
+    // }
+
+    .example-additional-selection {
+        opacity: 0.75;
+        font-size: 0.75em;
     }
 }
