--- a/src/app/widgets/contact-widget/contact-widget.component.html
+++ b/src/app/widgets/contact-widget/contact-widget.component.html
@@ -1,5 +1,5 @@
 <div class="contact">
-  <app-phone-svg></app-phone-svg>
+  <!-- <app-phone-svg></app-phone-svg> make this responsive to the width so it can desapear -->
   <div class="contact-me">
     Call us now: 1-800-255-8541
   </div>
@@ -7,3 +7,8 @@
     Click here to get online assistance
   </div>
 </div>
+
+
+<!-- https://www.tiledesk.com/pricing/ -->
+
+<!-- https://github.com/chat21/chat21-web-widget -->
