--- a/src/app/widgets/contact-widget/contact-widget.component.scss
+++ b/src/app/widgets/contact-widget/contact-widget.component.scss
@@ -1,19 +1,17 @@
 
 :host{
-    position: relative;
+    // position: relative;
     width: 100%;
     height: 100%;
     display: block;
 }
 
 .contact{
-    height: 250px;
-    width: 300px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
-    /*/deep/*/ app-phone-svg svg{
+    /deep/ app-phone-svg svg{
         fill: #39b764;
         width: 60px;
     }
