--- a/src/app/client-features/client-features-main/client-features-main.component.scss
+++ b/src/app/client-features/client-features-main/client-features-main.component.scss
@@ -11,7 +11,7 @@
             // display: flex;
             flex-grow: 1;
             // flex-shrink: 1;
-            background-color: white;
+            // background-color: white;
         }
         .left-col,
         .right-col{
