--- a/src/app/widgets/booking-widget/booking-widget.component.scss
+++ b/src/app/widgets/booking-widget/booking-widget.component.scss
@@ -1,4 +1,4 @@
-@import "node_modules/bootstrap/scss/bootstrap.scss";
+// @import "node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../../styles/variables";
 @import "../../../styles/mixins";
 
@@ -15,13 +15,12 @@
         max-width: 230px;
         width: 100%;
         height: 100%;
-        background-color: white;
         // display: flex;
         // justify-content: center;
     }
-    .b-card-content{
+    
+    .b-card-content{}
 
-    }
     /deep/ .mat-card-header-text {
         margin: 0;
     }
