update material and deep angular

--- a/src/app/client-features/silder/silder.component.scss
+++ b/src/app/client-features/silder/silder.component.scss
@@ -28,7 +28,7 @@
         background-size: cover;
         background-position: center;
     }
-    /deep/ .carousel-indicators{
+    /*/deep/*/ .carousel-indicators{
         z-index: 1002;
 
     }
