--- a/src/app/widgets/booking-widget/booking-widget.component.scss
+++ b/src/app/widgets/booking-widget/booking-widget.component.scss
@@ -21,7 +21,7 @@
     
     .b-card-content{}
 
-    /deep/ .mat-card-header-text {
+    /*/deep/*/ .mat-card-header-text {
         margin: 0;
     }
     mat-radio-group{
