--- a/src/app/widgets/contact-widget/contact-widget.component.scss
+++ b/src/app/widgets/contact-widget/contact-widget.component.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
-    /deep/ app-phone-svg svg{
+    /*/deep/*/ app-phone-svg svg{
         fill: #39b764;
         width: 60px;
     }
