--- a/src/app/client-features/home/home.component.html
+++ b/src/app/client-features/home/home.component.html
@@ -1,37 +1,52 @@
-<p>Top Companions Agency functions as your private concierge service for <span class="color-darker">exclusive sensual
-    encounters</span> with <strong>high-class escort companions &amp; travel escorts.</strong></p>
+<div class="row justify-content-center">
+  <div class="col-8 text-center">
+    <h1 class="title-nfasis"><span class="underline">Why</span> Choose Us</h1>
+    <p>Your confidence in our ability to assist you with a "dream come true" experience will be rewarded with
+      exceptional
+      communication, direction, courtesy, and <strong>DISCRETION</strong>. We will provide you with professional advice and coordination
+      to
+      assure you the most pleasant experience in your trip planning to our exotic island.</p>
+  </div>
+  <!-- <div class="col-4"></div> -->
+</div>
 <div class="resume-grls">
   <div *ngFor="let i of s" class="joder">
-  <mat-card class="example-card view overlay">
-    <!-- <mat-card-header> -->
+    <mat-card class="example-card view overlay">
+      <!-- <mat-card-header> -->
       <!-- <div mat-card-avatar class="example-header-image"></div> -->
       <!-- <mat-card-title>Shiba Inu</mat-card-title> -->
       <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
-    <!-- </mat-card-header> -->
-    <!--Card image-->
-    
-    <!-- class="g-image image-fluid" -->
-    <img  mat-card-image [src]="getImageUrl(i)" alt="Photo of a Shiba Inu">
-    <div class="mask rgba-white-light">Example</div>
+      <!-- </mat-card-header> -->
+      <!--Card image-->
+
+      <!-- class="g-image image-fluid" -->
+      <img mat-card-image [src]="getImageUrl(i)" alt="Photo of a Shiba Inu">
+      <div class="mask rgba-white-light">Example</div>
 
       <!-- <div class="g-image" mat-card-image> -->
       <!-- class="g-image image-fluid"  -->
       <!-- <img  [src]="getImageUrl(i)" alt="Photo of a Shiba Inu"> -->
       <!-- </div>  -->
 
-    <!--Card content-->
-    <mat-card-content>
-      <h3>Celete, <span>24</span></h3>
-      <p>
+      <!--Card content-->
+      <mat-card-content>
+        <h3>Celete, <span>24</span></h3>
+        <p>
           Celeste is your young dream girl...
-      </p>
-    </mat-card-content>
-    <!-- <mat-card-actions>
+        </p>
+      </mat-card-content>
+      <!-- <mat-card-actions>
       <button mat-button>LIKE</button>
       <button mat-button>SHARE</button>
     </mat-card-actions> -->
-    <div class="desc">Celeste is your young dream girl... petite, sweet, smart, warm, sexy, and confident. She is the beautiful and exotic woman with the friendly personality you have always hoped you would meet. Giving you different experiences is Latesha favorite specialty! Her wonderful smile and amazing curves will make you happy to have her as the perfect companion for any particular occasion!</div>
-  </mat-card>
-</div>
+      <div class="desc">
+        <h3>Creative</h3>
+        <mdc-list-divider></mdc-list-divider>
+        Celeste is your young dream girl... petite, sweet, smart, warm, sexy, and confident. She is the
+        beautiful and exotic woman with the friendly personality you have always hoped you would meet. Giving you
+        different experiences is Latesha favorite specialty! Her wonderful smile and amazing curves will make you happy
+        to have her as the perfect companion for any particular occasion!</div>
+    </mat-card>
+  </div>
 
 </div>
