--- a/src/app/client-features/silder/silder.component.html
+++ b/src/app/client-features/silder/silder.component.html
@@ -10,8 +10,8 @@
             <!-- rgba-black-light -->
           </div>
           <div class="carousel-caption">
-            <h3 class="h3-responsive">probando 1</h3>
-            <p>probando 1</p>
+            <!-- <h3 class="h3-responsive">probando 1</h3> -->
+            <!-- <p>probando 1</p> -->
           </div>
         </mdb-carousel-item>
         <mdb-carousel-item>
@@ -42,3 +42,28 @@
       </mdb-carousel>
       <app-booking-widget></app-booking-widget>
 </div>
+
+<!-- <div class="slider">
+  <div class="iAmTest carousel">
+    <img src="http://code.builtbyevolve.com/nerveSlider/example-images/canyon.jpg"
+      data-slidecaption="<h1>Caption Titlse</h1>Hey!  This is a slide caption!">
+    <a href="http://www.builtbyevolve.com/" target="_blank"><img
+        src="http://code.builtbyevolve.com/nerveSlider/example-images/dusk.jpg" data-slidecaption="I have a link!"></a>
+    <img src="http://code.builtbyevolve.com/nerveSlider/example-images/winter.jpg">
+    <img src="http://code.builtbyevolve.com/nerveSlider/example-images/tree.jpg">
+  </div>
+  <app-booking-widget></app-booking-widget>
+
+</div> -->
+
+<!-- <div class="view w-100">
+    <div class="d-block w-100" style="background-image: url('http://www.dreameurotrip.com/wp-content/uploads/2014/04/berlin-party-scene-watergate.jpg')" class="slide-image"></div>
+3</div>
+
+<div class="view w-100">
+    <div class="d-block w-100" style="background-image: url('http://www.majesticcostamujeres.com/images/slides/slide-2.jpg')" class="slide-image"></div>
+2</div>
+
+<div class="view w-100">
+    <div class="d-block w-100" style="background-image: url('https://www.secretescortsdr.com/storage/app/uploads/public/5a5/db6/33b/5a5db633b246f205480256.jpg?v=14')" class="slide-image"></div>
+1</div> -->
