--- a/src/styles/_mdc-material.scss
+++ b/src/styles/_mdc-material.scss
@@ -1,4 +1,4 @@
 // #MDC Angular
-$mdc-theme-primary: #1565c0; // primary color
+$mdc-theme-primary: orange; // primary color
 $mdc-theme-secondary: #388e3c; // secondary color
 @import "~@angular-mdc/theme/material";
