--- a/src/app/client-features/home/home.component.scss
+++ b/src/app/client-features/home/home.component.scss
@@ -2,6 +2,13 @@
 @import "../../../styles/variables";
 @import "../../../styles/mixins";
 
+:host{
+    padding-top: 50px;
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
 .resume-grls{
     margin-bottom: 45px;
     display: flex;
