--- a/src/styles/_material.scss
+++ b/src/styles/_material.scss
@@ -1,51 +1,21 @@
 // #Angular Material 2
 @import '~@angular/material/theming';
+@import "./material-palette.scss";
 
 @include mat-core();
 
 .pe-dark-theme{
-    $pe-dark-primary: mat-palette($mat-blue-grey);
-    $pe-dark-accent:  mat-palette($mat-amber, A200, A100, A400);
+    $pe-dark-primary: mat-palette($mat-orange);
+    $pe-dark-accent:  mat-palette($mat-deep-orange, A200, A100, A400);
     $pe-dark-warn:    mat-palette($mat-deep-orange);
-    // // Background palette for dark themes.
-    // $mat-dark-theme-background: (
-    //     status-bar: black,
-    //     app-bar:    map_get($mat-grey, 900),
-    //     background: #303030,
-    //     hover:      rgba(white, 0.04), // TODO(kara): check style with Material Design UX
-    //     card:       map_get($mat-grey, 900),
-    //     dialog:     map_get($mat-grey, 800),
-    //     disabled-button: rgba(white, 0.12),
-    //     raised-button: map-get($mat-grey, 800),
-    //     focused-button: $light-focused,
-    //     selected-button: map_get($mat-grey, 900),
-    //     selected-disabled-button: map_get($mat-grey, 800),
-    //     disabled-button-toggle: black,
-    //     unselected-chip: map_get($mat-grey, 700),
-    //     disabled-list-option: black,
-    // );
-    //   // Foreground palette for dark themes.
-    // $mat-dark-theme-foreground: (
-    //     base:              white,
-    //     divider:           $light-dividers,
-    //     dividers:          $light-dividers,
-    //     disabled:          $light-disabled-text,
-    //     disabled-button:   rgba(white, 0.3),
-    //     disabled-text:     $light-disabled-text,
-    //     elevation:         black,
-    //     hint-text:         $light-disabled-text,
-    //     secondary-text:    $light-secondary-text,
-    //     icon:              white,
-    //     icons:             white,
-    //     text:              white,
-    //     slider-min:        white,
-    //     slider-off:        rgba(white, 0.3),
-    //     slider-off-active: rgba(white, 0.3),
-    // );
     $pe-dark-theme:   mat-dark-theme($pe-dark-primary, $pe-dark-accent, $pe-dark-warn);
     @include angular-material-theme($pe-dark-theme);
 }
 
+// custom material
+.mat-form-field-infix {
+    width: 100%!important;
+}
 //card
 // #242222
 //#282323 
