--- a/src/app/client-features/pages/gallery/gallery.component.html
+++ b/src/app/client-features/pages/gallery/gallery.component.html
@@ -1,1 +1,4 @@
-<p>gallery works!</p>
+<h1 class="title-nfasis"><span class="underline">Gall</span>ery</h1>
+<div class="d-flex justify-content-center">
+    <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class=""></ngx-gallery>
+</div>
