--- a/src/app/widgets/booking-widget/booking-widget.component.html
+++ b/src/app/widgets/booking-widget/booking-widget.component.html
@@ -82,7 +82,7 @@
 
                 <mat-card-actions>
                     <div class="example-button-row">
-                        <button mat-raised-button color="primary">Book Now</button>
+                        <button mat-raised-button color="primary" [routerLink]="'/booking'">Book Now</button>
                     </div>
                 </mat-card-actions>
             </div>
