--- a/src/app/client-features/packages/packages.component.html
+++ b/src/app/client-features/packages/packages.component.html
@@ -1,29 +1,31 @@
 <div>
-  <mat-card class="package" >
+  <h1 class="title-nfasis"><span class="underline">Pack</span>ages</h1>
+  <div class="package-filter">actions</div>
+  <mat-card class="package">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      <mat-card-title>The Bucket List Package </mat-card-title>
+      <mat-card-subtitle>10 GIRLS. 24 HOURS A DAY. </mat-card-subtitle>
     </mat-card-header>
-    <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+    <img mat-card-image
+      src="https://drsexvacations.com/wp-content/uploads/2018/12/48277766_277205719653761_8845334770717032448_n.png"
+      alt="Photo of a Shiba Inu">
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        The Best Sex Vacation Package In The World.
       </p>
       <mat-list>
         <!-- <mat-divider></mat-divider> -->
-          <mat-list-item> Pepper </mat-list-item>
-          <mat-list-item> Salt </mat-list-item>
-          <!-- <mat-divider></mat-divider> -->
-          <mat-list-item> Paprika </mat-list-item>
-          <mat-divider></mat-divider>
-         </mat-list>
+        <mat-list-item>pick up</mat-list-item>
+        <mat-list-item>pool</mat-list-item>
+        <!-- <mat-divider></mat-divider> -->
+        <mat-list-item> </mat-list-item>
+        <mat-divider></mat-divider>
+      </mat-list>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <button mat-button></button>
+      <button mat-button>Book Now!</button>
     </mat-card-actions>
   </mat-card>
 
