--- a/src/app/client-features/pages/booking/booking.component.html
+++ b/src/app/client-features/pages/booking/booking.component.html
@@ -1,1 +1,44 @@
-<p>booking works!</p>
+<h1 class="title-nfasis"><span class="underline">Book</span>ing</h1>
+<div class="row">
+    <div class="col-3">
+        <app-booking-widget class="position-sticky"></app-booking-widget>
+    </div>
+    <div class="col-9">
+        <ng-container *ngFor="let place of places">
+            <mat-card class="booking-card">
+                <mat-card-content>
+                    <img mat-card-image
+                        src="https://odis.homeaway.com/odis/listing/7e04139f-1678-4a69-a9dc-d86be6bd80c6.c10.jpg"
+                        alt="Photo of a Shiba Inu" class="book-thumbnail">
+                    <div class="detail-content">
+                        <div>
+                            <div class="row">
+                                <div class="col">
+                                    <!-- <mat-icon>local_hotel</mat-icon>&nbsp; -->
+                                    <b>2 Bedrooms</b>
+                                </div>
+                                <div class="col">
+                                    <!-- <mat-icon>local_hotel</mat-icon>&nbsp; -->
+                                    <b>3 Bathrooms</b>
+                                </div>
+                                <div class="col">
+                                        <!-- <mat-icon>local_hotel</mat-icon>&nbsp; -->
+                                        <b>Pool</b>
+                                </div>
+                                
+                            </div>
+                            <mat-divider></mat-divider>
+                            <p>
+                                    Located in Pedro Brand, Purple Gate Villa has accommodations with a private pool, a patio and pool views. With garden views, this property provides a balcony.
+                            </p>
+                        </div>
+                        <mat-card-actions class="d-flex justify-content-end">
+                                <button mat-button>Details</button>
+                                <button mat-raised-button color="primary">Book now!</button>
+                        </mat-card-actions>
+                    </div>
+                </mat-card-content>
+            </mat-card>
+        </ng-container>
+    </div>
+</div>
