--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,10 @@ strong{
     opacity: 1;
     border-radius: 100%;
 }
+
+.mat-sidenav-container, .mat-sidenav-content, .mat-tab-body-content {
+    transform: none !important;
+}
 // for normal text 
 // #818181;
 
