last changes a lot

--- a/src/app/client-features/footer/footer.component.html
+++ b/src/app/client-features/footer/footer.component.html
@@ -1,5 +1,14 @@
 <div class="footer">
   <div class="container">
-    footer
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-4"></div>
+      <div class="col-4">
+        <button mat-raised-button color="accent" (click)="openDialog()">
+          <span><mat-icon matSuffix fontSet="fa" fontIcon="fa-address-card"></mat-icon>Login</span>
+        </button>
+        <i class="far fa-address-card"></i>
+      </div>
+    </div>
   </div>
 </div>
