--- a/src/app/client-features/home/home.component.html
+++ b/src/app/client-features/home/home.component.html
@@ -21,7 +21,7 @@
 
       <!-- class="g-image image-fluid" -->
       <img mat-card-image [src]="getImageUrl(i)" alt="Photo of a Shiba Inu">
-      <div class="mask rgba-white-light">Example</div>
+      <div class="mask rgba-white-light">.</div>
 
       <!-- <div class="g-image" mat-card-image> -->
       <!-- class="g-image image-fluid"  -->
