--- a/src/app/client-features/packages/packages.component.html
+++ b/src/app/client-features/packages/packages.component.html
@@ -1,32 +1,119 @@
 <div>
+  <!-- NOTA:    Discretion: Hotel name, photo and logo -->
   <h1 class="title-nfasis"><span class="underline">Pack</span>ages</h1>
-  <div class="package-filter">actions</div>
-  <mat-card class="package">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>The Bucket List Package </mat-card-title>
-      <mat-card-subtitle>10 GIRLS. 24 HOURS A DAY. </mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image
-      src="https://drsexvacations.com/wp-content/uploads/2018/12/48277766_277205719653761_8845334770717032448_n.png"
-      alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Best Sex Vacation Package In The World.
-      </p>
-      <mat-list>
-        <!-- <mat-divider></mat-divider> -->
-        <mat-list-item>pick up</mat-list-item>
-        <mat-list-item>pool</mat-list-item>
-        <!-- <mat-divider></mat-divider> -->
-        <mat-list-item> </mat-list-item>
-        <mat-divider></mat-divider>
-      </mat-list>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button></button>
-      <button mat-button>Book Now!</button>
-    </mat-card-actions>
-  </mat-card>
+  <!-- <div class="package-filter">actions</div> -->
+  <div class="package-container">
+    <mat-card class="package">
+      <mat-card-header>
+        <!-- <div mat-card-avatar class="example-header-image"></div> -->
+        <mat-card-title>Bronze </mat-card-title>
+        <mat-card-subtitle>10 GIRLS. 24 HOURS A DAY. </mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image
+        src="https://drsexvacations.com/wp-content/uploads/2018/12/48277766_277205719653761_8845334770717032448_n.png"
+        alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          The Best Sex Vacation Package In The World.
+        </p>
+        <mat-list>
+          <!-- Blue bay -->
+          <mat-divider></mat-divider>
+          <mat-list-item>- 2 Nights 3 days</mat-list-item>
+          <mat-list-item>- All Inclusive</mat-list-item>
+          <mat-list-item>- round trip transportation (pickup)</mat-list-item>
+          <mat-list-item>- 1 Girl (companion)</mat-list-item>
+          <mat-list-item>- 1 Premium drink (on-site/ in the unit)</mat-list-item>
+          <mat-list-item>- VIP</mat-list-item>
+          <mat-list-item>- Beach on sight</mat-list-item>
+          <mat-list-item>- Accommodation details(separate module)</mat-list-item>
+          <mat-list-item>- 5 stars location</mat-list-item>
+          <mat-list-item>- Penthouse</mat-list-item>
+          <mat-divider></mat-divider>
+        </mat-list>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="secondary">Book Now!</button>
+      </mat-card-actions>
+    </mat-card>
 
+    <mat-card class="package mat-elevation-z21 famous">
+      <mat-card-header>
+        <!-- <div mat-card-avatar class="example-header-image">
+          <mat-icon>person</mat-icon>  
+        </div> -->
+        <mat-card-title>Gold</mat-card-title>
+        <mat-card-subtitle>10 GIRLS. 24 HOURS A DAY. </mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image
+        src="https://drsexvacations.com/wp-content/uploads/2018/12/48277766_277205719653761_8845334770717032448_n.png"
+        alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          The Best Sex Vacation Package In The World.
+        </p>
+        <mat-list>
+          <mat-divider></mat-divider>
+          <mat-list-item>- Villa 2 Dormitorios</mat-list-item>  <!-- piscina privada -->
+          <mat-list-item>- All Inclusive</mat-list-item>
+          <mat-list-item>- round trip transportation (pickup)</mat-list-item>
+          <mat-list-item>- 1 Girl (companion)</mat-list-item>
+          <mat-list-item>- 1 Premium drink (on-site/ in the unit)</mat-list-item>
+          <mat-list-item>- VIP</mat-list-item>
+          <mat-list-item>- Beach on sight</mat-list-item>
+          <mat-list-item>- Accommodation details(separate module)</mat-list-item>
+          <mat-list-item>- 5 stars location</mat-list-item>
+          <mat-list-item>- Penthouse</mat-list-item>
+          <!-- <mat-divider></mat-divider> -->
+          <mat-list-item> </mat-list-item>
+          <mat-divider></mat-divider>
+          <!-- catalonia -->
+        </mat-list>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="primary">Book Now!</button>
+      </mat-card-actions>
+    </mat-card>
+
+    <mat-card class="package luxury">
+      <mat-card-header>
+        <!-- <div mat-card-avatar class="example-header-image"></div> -->
+        <mat-card-title>Diamond</mat-card-title>
+        <mat-card-subtitle>10 GIRLS. 24 HOURS A DAY. </mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image
+        src="https://drsexvacations.com/wp-content/uploads/2018/12/48277766_277205719653761_8845334770717032448_n.png"
+        alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          The Best Sex Vacation Package In The World.
+        </p>
+        <mat-list>
+          <mat-divider></mat-divider>
+          <mat-list-item>- 2 Nights 3 days</mat-list-item>
+          <mat-list-item>- Personal chef in villa (Breakfast, Lunch and Dinner)</mat-list-item>
+          <!-- <mat-list-item>- round trip transportation (pickup)</mat-list-item> talvez dependiendo de villa  -->
+          <!-- <mat-list-item>- round trip transportation (pickup)</mat-list-item>  -->
+
+          <!-- <mat-list-item>- 1 Girl (companion)</mat-list-item> -->
+          <mat-list-item>- International Drinks Open Bar (menu)</mat-list-item>
+          <!-- <mat-list-item>- VIP</mat-list-item> -->
+          <!-- <mat-list-item>- Beach on sight</mat-list-item> -->
+          <mat-list-item>- Accommodation details(separate module)</mat-list-item>
+          <mat-list-item>- 5 stars location</mat-list-item>
+          <mat-list-item>- villa</mat-list-item>
+          <!-- posibilidad de cambio de g 2 dias amitad de semana  a mitad de semana (antes de llegar avisar que se quiere) -->
+          <!-- preseleccionarlas  1,2,3 - 2/noches min -> grls -->
+          <!-- carros de golf+
+           -->
+          <mat-list-item> </mat-list-item>
+          <mat-divider></mat-divider>
+          <!-- many villas -->
+        </mat-list>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="accent">Book Now!</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
