--- a/src/app/client-features/pages/booking/booking.component.html
+++ b/src/app/client-features/pages/booking/booking.component.html
@@ -22,23 +22,30 @@
                                     <b>3 Bathrooms</b>
                                 </div>
                                 <div class="col">
-                                        <!-- <mat-icon>local_hotel</mat-icon>&nbsp; -->
-                                        <b>Pool</b>
+                                    <!-- <mat-icon>local_hotel</mat-icon>&nbsp; -->
+                                    <b>Pool</b>
                                 </div>
-                                
+                                <div class="col">
+                                    <!-- <mat-icon>local_hotel</mat-icon>&nbsp; -->
+                                    <b>Jacuzzi</b>
+                                </div>
+
                             </div>
                             <mat-divider></mat-divider>
                             <p>
-                                    Located in Pedro Brand, Purple Gate Villa has accommodations with a private pool, a patio and pool views. With garden views, this property provides a balcony.
+                                Located in Pedro Brand, Purple Gate Villa has accommodations with a private pool, a
+                                patio and pool views. With garden views, this property provides a balcony.
                             </p>
                         </div>
                         <mat-card-actions class="d-flex justify-content-end">
-                                <button mat-button>Details</button>
-                                <button mat-raised-button color="primary">Book now!</button>
+                            <button mat-button>Details</button>
+                            <button mat-raised-button color="primary">Book now!</button>
                         </mat-card-actions>
                     </div>
                 </mat-card-content>
             </mat-card>
         </ng-container>
+        <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]">
+        </mat-paginator>
     </div>
 </div>
